--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <ul id="myList">
       <li>Coffee</li>
       <li>Tea</li>
+      <li>decaf</li>
     </ul>
     <button class="btn" onclick="myFunction()">
       Click Me!
